--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "client",
+	"name": "react-recaptcha-client",
 	"version": "0.1.0",
 	"homepage": "https://Callum-Irving.github.com/react-recaptcha",
 	"private": true,
